--- a/vc2013/BatchassSpidermoon.vcxproj
+++ b/vc2013/BatchassSpidermoon.vcxproj
@@ -114,7 +114,9 @@
   <ItemGroup>
     <ResourceCompile Include="Resources.rc" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Xml Include="Debug\VDSettings.xml" />
+  </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <ClInclude Include="..\include\BatchassSpidermoonApp.h" />
