--- a/vc2013/BatchassSpidermoon.vcxproj.filters
+++ b/vc2013/BatchassSpidermoon.vcxproj.filters
@@ -356,4 +356,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Debug\VDSettings.xml">
+      <Filter>Debug</Filter>
+    </Xml>
+  </ItemGroup>
 </Project>
